<resources>
    <string name="app_name">MyAndroid</string>
    <string name="main_tv_title">Знайомство з Android</string>
    <string name="app_btn_UA">Елементи UA</string>
    <string name="app_btn_temp">Прогноз</string>
    <string name="calc_tv_title">Калькулятор</string>
    <string name="app_btn_rates">Курс валют</string>
    <string name="app_btn_chat">Chat</string>
    <string name="app_btn_chat2">Christmas Chat</string>
    <string name="app_btn_send">Send</string>
    <string name="no_input_chat">Введить текст!</string>
    <string name="chat_et_nik">Nik:</string>

    <string name="rates_ex_thread">Відкриття з\'єднання з UI (основного) потоку</string>
    <string name="rates_continue">OK</string>
    <string name="rates_tittle">Кращий курс</string>
    <string name="rates_btn">За назвою</string>
    <string name="rates_btn_max">За зростанням</string>
    <string name="rates_btn_min">За зменшенням</string>
    <string name="rates_edit">Введить... </string>
    <string name="rates_btn_edit">Шукати</string>


    <string name="calc_tv_2048">2048</string>
    <string name="game_tv_title">2048</string>
    <string name="game_tv_hint">Join the numbers and get to get the 2048 tile!</string>
    <string name="btn_new_game">NEW</string>
    <string name="btn_undo">UNDO</string>
    <string name="SCORE">SCORE</string>
    <string name="BEST">BEST</string>
    <string name="SCORE2">%d</string>
    <string name="BEST2">%d</string>


    <string name="game_toast_no_move">Not move</string>

    <string name="game_over">Game over</string>
    <string name="game_over_dialog">Do you want to start over?</string>
    <string name="game_over_yes">Yes</string>
    <string name="game_over_no">No</string>
    <string name="game_over_undo">Undo</string>

    <string name="game_new_game">New game</string>
    <string name="game_new_game_dialog">Do you want start new game?</string>

    <string name="game_2048">Congratulations.</string>
    <string name="game_2048_dialog">You have reached 2048!!!\nContinue?</string>


    <string name="game_checkbox_sound">Sound</string>


    <string name="tv_2">2</string>
    <string name="tv_4">4</string>
    <string name="tv_8">8</string>
    <string name="tv_16">16</string>
    <string name="tv_32">32</string>
    <string name="tv_64">64</string>
    <string name="tv_128">128</string>
    <string name="tv_256">256</string>
    <string name="tv_512">512</string>


    <string name="view_tv_title">Елементи UA (Views)</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="linear_layout_h">LinearLayout:horizontal:</string>


    <string name="views_temp">Прогноз погоди</string>
    <string name="edit_city">Ваше місто</string>
    <string name="btn_temp">Отримати прогноз</string>
    <string name="no_input">Введить Ваше місто!</string>


    <string name="calc_btn_percent">%</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_ce">CE</string>
    <string name="calc_btn_backspace">\u232B</string>


    <string name="calc_btn_inverse">\u00B9/\u2093</string>
    <string name="calc_btn_square">x\u00B2</string>
    <string name="calc_btn_sqrt">\u221A\u0078\u0304</string>
    <string name="calc_btn_divide">\u00F7</string>


    <string name="calc_btn_7">\u0037</string>
    <string name="calc_btn_8">\u0038</string>
    <string name="calc_btn_9">\u0039</string>
    <string name="calc_btn_multiplication">\u00D7</string>


    <string name="calc_btn_4">\u0034</string>
    <string name="calc_btn_5">\u0035</string>
    <string name="calc_btn_6">\u0036</string>
    <string name="calc_btn_minus">\u002D</string>

    <string name="calc_btn_1">\u0031</string>
    <string name="calc_btn_2">\u0032</string>
    <string name="calc_btn_3">\u0033</string>
    <string name="calc_btn_plus">\u002B</string>


    <string name="calc_btn_plus_minus">\u002B/\u002D</string>
    <string name="calc_btn_0">\u0030</string>
    <string name="calc_btn_comma">\u002C</string>
    <string name="calc_btn_equal">\u003D</string>


    <string name="calc_div_zero_message">Cannot divide by zero</string>
</resources>