<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/game_layout"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/game_tv_title"
            style="@style/game_title_el" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="7dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                style="@style/game_score_best"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/SCORE"
                    style="@style/game_score"/>
                <TextView
                    android:id="@+id/tv_game_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SCORE2"
                    style="@style/game_score2"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_new_game"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:text="@string/btn_new_game"
                app:backgroundTint="@null"
                style="@style/game_btn"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="7dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                style="@style/game_score_best"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/BEST"
                    style="@style/game_score"/>
                <TextView
                    android:id="@+id/tv_game_best"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/BEST2"
                    style="@style/game_score2"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_undo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:text="@string/btn_undo"
                app:backgroundTint="@null"
                style="@style/game_btn"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_tv_hint"
        android:textAlignment="center"
        android:textSize="10sp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="40dp"
        android:background="@color/table_background">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp">
            <TextView style="@style/tv_512"
                android:text="@string/tv_512"/>
            <TextView style="@style/tv_null" />
            <TextView style="@style/tv_null" />
            <TextView style="@style/tv_null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp">

            <TextView style="@style/tv_null" />
            <TextView style="@style/tv_null" />
            <TextView style="@style/tv_null" />
            <TextView style="@style/tv_null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp">

            <TextView style="@style/tv_null" />
            <TextView style="@style/tv_null" />
            <TextView style="@style/tv_null" />
            <TextView style="@style/tv_null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp">

            <TextView style="@style/tv_null" />
            <TextView style="@style/tv_null" />
            <TextView style="@style/tv_null" />
            <TextView style="@style/tv_null" />
        </TableRow>
    </TableLayout>

</LinearLayout>
