<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RatesActivity">

    <LinearLayout
        android:id="@+id/rates_tv_json"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/rates_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rates_btn"
            android:layout_marginVertical="10px"
            android:layout_marginHorizontal="5dp"
            app:backgroundTint="@null"
            style="@style/rates_btn"/>
        <Button
            android:id="@+id/rate_btn_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10px"
            android:layout_marginHorizontal="5dp"
            android:text="@string/rates_btn_max"
            app:backgroundTint="@null"
            style="@style/rates_btn"/>
        <Button
            android:id="@+id/rate_btn_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10px"
            android:layout_marginHorizontal="5dp"
            android:text="@string/rates_btn_min"
            app:backgroundTint="@null"
            style="@style/rates_btn"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginTop="10sp"
            android:backgroundTint="@color/calc_btn_equal_background"
            android:ems="10"
            android:inputType="text"
            android:textColorHint="@color/calc_btn_equal_background"
            android:textColor="@color/calc_btn_equal_background"
            android:hint="@string/rates_edit" />

        <Button
            android:id="@+id/rate_btn_edit"
            style="@style/rates_btn"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10px"
            android:text="@string/rates_btn_edit"
            app:backgroundTint="@null" />
    </LinearLayout>
    </LinearLayout>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rates_tv_json" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/rates_container"/>
<!--        <GridLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@color/black"-->
<!--            android:id="@+id/rates_container"-->
<!--            android:gravity="center"-->
<!--            android:paddingHorizontal="20dp"/>-->
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>