<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ChatActivity">
    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_launcher_foreground"
            android:drawablePadding="8dp"
            android:text="" />
        <TextView
            android:id="@+id/chat_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:fontFamily="@font/mountains_of_christmas"
            android:text="@string/app_btn_chat2"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="20sp" />
    </LinearLayout>
    <ScrollView
        android:id="@+id/chat_sv_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/chat_layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_sv_container"
        app:layout_constraintVertical_bias="0.0">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edit_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_temp"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="@font/send"
                android:hint="@string/no_input_chat"
                android:textSize="16sp"
                android:inputType="textMultiLine"
                android:lines="2"
                android:textColor="@color/colorText"
                android:textColorHint="@color/calc_expression_text"
                app:layout_constraintWidth_percent="0.67" />

            <Button
                android:id="@+id/btn_temp"
                style="@style/calc_btn_func"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_text"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="@font/mountains_of_christmas"
                android:text="@string/app_btn_send"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>